--- a/VietJob_V2/Views/Shared/_Layout.cshtml
+++ b/VietJob_V2/Views/Shared/_Layout.cshtml
@@ -32,6 +32,10 @@
     <link rel="stylesheet" type="text/css" href="../../Content/kendoui/app-assets/css/core/colors/palette-gradient.css">
     <link rel="stylesheet" type="text/css" href="../../Content/kendoui/app-assets/css/pages/chat-application.css">
     <link rel="stylesheet" type="text/css" href="../../Content/kendoui/app-assets/css/pages/dashboard-analytics.css">
+    <link rel="stylesheet" type="text/css" href="../../Content/kendoui/app-assets/css/core/menu/menu-types/horizontal-menu.css">
+    <link rel="stylesheet" type="text/css" href="../../Content/kendoui/app-assets/css/core/colors/palette-gradient.css">
+    <link rel="stylesheet" type="text/css" href="../../Content/kendoui/app-assets/css/plugins/charts/chartist.css">
+    <link rel="stylesheet" type="text/css" href="../../Content/kendoui/app-assets/css/plugins/forms/extended/form-extended.css">
     <!-- END: Page CSS-->
     <!-- BEGIN: Custom CSS-->
     <link rel="stylesheet" type="text/css" href="../../Content/kendoui/assets/css/style.css">
@@ -41,7 +45,8 @@
 <!-- END: Head-->
 <!-- BEGIN: Body-->
 
-<body class="horizontal-layout horizontal-menu 2-columns  " data-open="hover" data-menu="horizontal-menu" data-color="bg-gradient-x-purple-blue" data-col="2-columns">
+<body class="horizontal-layout horizontal-menu 2-columns  " data-open="hover" data-menu="horizontal-menu" 
+      data-color="bg-gradient-x-purple-blue" data-col="2-columns" data-ng-app="myApp">
 
     <!-- BEGIN: Header-->
     <!-- fixed-top-->
@@ -320,11 +325,7 @@
     <!-- BEGIN: Footer-->
     <footer class="footer footer-static footer-light navbar-shadow">
         <div class="clearfix blue-grey lighten-2 text-sm-center mb-0 px-2">
-            <span class="float-md-left d-block d-md-inline-block">2019 &copy; Copyright <a class="text-bold-800 grey darken-2" href="https://themeselection.com" target="_blank">ThemeSelection</a></span>
-            <ul class="list-inline float-md-right d-block d-md-inline-blockd-none d-lg-block mb-0">
-                <li class="list-inline-item"><a class="my-1" href="https://themeselection.com/" target="_blank"> More themes</a></li>
-                <li class="list-inline-item"><a class="my-1" href="https://themeselection.com/support" target="_blank"> Support</a></li>
-            </ul>
+            <span class="float-md-left d-block d-md-inline-block">2023 &copy; Copyright <a class="text-bold-800 grey darken-2" href="" target="_blank">Viet Jobs</a></span>
         </div>
     </footer>
     <!-- END: Footer-->
@@ -342,8 +343,13 @@
     <!-- END: Theme JS-->
     <!-- BEGIN: Page JS-->
     <script src="../../Content/kendoui/app-assets/js/scripts/pages/dashboard-analytics.js" type="text/javascript"></script>
+    <script src="../../Content/kendoui/app-assets/vendors/js/forms/extended/maxlength/bootstrap-maxlength.js" type="text/javascript"></script>
+    <script src="../../Content/kendoui/app-assets/js/scripts/forms/extended/form-maxlength.js" type="text/javascript"></script>
     <!-- END: Page JS-->
 
+    <script src="../../Scripts/angular.js" type="text/javascript"></script>
+    <script src="../../Scripts/apps/dangminhsang.js" type="text/javascript"></script>
+    @RenderSection("scripts", false)
 </body>
 <!-- END: Body-->
 
